// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar rendered structure snapshots matches the empty default navigation structure without an active route 1`] = `
<nav
  aria-label="Primary"
>
  <ul
    class="flex flex-wrap items-center gap-1 sm:gap-2"
  >
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/contracts"
      >
        Contracts
      </a>
    </li>
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/milestones"
      >
        Milestones
      </a>
    </li>
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/reputation"
      >
        Reputation
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Navbar rendered structure snapshots matches the fallback navigation structure for an unknown route 1`] = `
<nav
  aria-label="Primary"
>
  <ul
    class="flex flex-wrap items-center gap-1 sm:gap-2"
  >
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/contracts"
      >
        Contracts
      </a>
    </li>
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/milestones"
      >
        Milestones
      </a>
    </li>
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/reputation"
      >
        Reputation
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Navbar rendered structure snapshots matches the loaded navigation structure with an active route 1`] = `
<nav
  aria-label="Primary"
>
  <ul
    class="flex flex-wrap items-center gap-1 sm:gap-2"
  >
    <li>
      <a
        aria-current="page"
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--primary)] bg-[var(--primary)]/10"
        href="/contracts"
      >
        Contracts
      </a>
    </li>
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/milestones"
      >
        Milestones
      </a>
    </li>
    <li>
      <a
        class="rounded-lg px-3 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-[var(--ring)] focus:ring-offset-1 text-[var(--muted-foreground)] hover:text-[var(--foreground)] hover:bg-[var(--muted)]"
        href="/reputation"
      >
        Reputation
      </a>
    </li>
  </ul>
</nav>
`;
